AP changes and initial implementatuion of sshfs mount negotiation in cavern