@@ -67,6 +67,7 @@
 
 package org.opencadc.cavern.files;
 
+import ca.nrc.cadc.auth.AuthenticationUtil;
 import ca.nrc.cadc.net.TransientException;
 import ca.nrc.cadc.reg.Capabilities;
 import ca.nrc.cadc.reg.Capability;
@@ -77,6 +78,7 @@ import ca.nrc.cadc.util.RsaSignatureGenerator;
 import ca.nrc.cadc.util.RsaSignatureVerifier;
 import ca.nrc.cadc.uws.Job;
 import ca.nrc.cadc.uws.Parameter;
+import ca.nrc.cadc.vos.ContainerNode;
 import ca.nrc.cadc.vos.DataNode;
 import ca.nrc.cadc.vos.Direction;
 import ca.nrc.cadc.vos.LinkingException;
@@ -91,14 +93,15 @@ import ca.nrc.cadc.vos.server.transfers.TransferGenerator;
 import java.io.ByteArrayInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
+import java.nio.file.attribute.UserPrincipal;
 import java.security.AccessControlException;
 import java.security.InvalidKeyException;
+import java.security.SignatureException;
 import java.util.ArrayList;
 import java.util.List;
 import org.apache.log4j.Logger;
@@ -127,7 +130,7 @@ public class CavernURLGenerator implements TransferGenerator {
     }
 
     @Override
-    public List<URL> getURLs(VOSURI target, Protocol protocol, View view,
+    public List<URI> getEndpoints(VOSURI target, Protocol protocol, View view,
             Job job, List<Parameter> additionalParams)
             throws FileNotFoundException, TransientException {
         if (target == null) {
@@ -138,7 +141,6 @@ public class CavernURLGenerator implements TransferGenerator {
         }
 
         try {
-
             // get the node to check the type - consider changing this API
             // so that the node instead of the URI is passed in so this step
             // can be avoided.
@@ -146,13 +148,28 @@ public class CavernURLGenerator implements TransferGenerator {
             PathResolver ps = new PathResolver(nodes, true);
             Node node = ps.resolveWithReadPermissionCheck(target, null, true);
 
-            if (!(node instanceof DataNode)) {
-                throw new UnsupportedOperationException("Only DataNode transfers currently supported: " + node.getUri());
-            }
+            if (node instanceof ContainerNode) {
+                UserPrincipal caller = nodes.getPosixUser(AuthenticationUtil.getCurrentSubject());
+                return handleContainerMount(target, (ContainerNode) node, protocol, caller);
+            } else if (node instanceof DataNode) {
+                return handleDataNode(target, (DataNode) node, protocol);
+            } else {
+                throw new UnsupportedOperationException(node.getClass().getSimpleName() + " transfer " 
+                    + node.getUri());
+            } 
+        } catch (NodeNotFoundException ex) {
+            throw new FileNotFoundException(target.getPath());
+        } catch (IOException ex) {
+            throw new RuntimeException("OOPS: failed to resolve subject to posix user", ex);
+        } catch (LinkingException ex) {
+            throw new RuntimeException("OOPS: failed to resolve link?", ex);
+        }
+    }
 
-            String scheme = null;
-            Direction dir = null;
-
+    private List<URI> handleDataNode(VOSURI target, DataNode node, Protocol protocol) {
+        String scheme = null;
+        Direction dir = null;
+        try {
             switch (protocol.getUri()) {
                 case VOS.PROTOCOL_HTTP_GET:
                     scheme = "http";
@@ -220,24 +237,37 @@ public class CavernURLGenerator implements TransferGenerator {
             log.debug("Created request path: " + path.toString());
 
             // add the request path to each of the base URLs
-            List<URL> returnList = new ArrayList<URL>(baseURLs.size());
+            List<URI> returnList = new ArrayList<URI>(baseURLs.size());
             for (URL baseURL : baseURLs) {
-                URL next;
+                URI next;
                 try {
-                    next = new URL(baseURL.toString() + path.toString());
+                    next = new URI(baseURL.toString() + path.toString());
                     log.debug("Added url: " + next);
                     returnList.add(next);
-                } catch (MalformedURLException e) {
-                    throw new IllegalStateException("Could not generate url", e);
+                } catch (URISyntaxException e) {
+                    throw new IllegalStateException("Could not generate trannsfer endpoint uri", e);
                 }
             }
 
             return returnList;
-        } catch (LinkingException ex) {
-            throw new RuntimeException("OOPS", ex);
-        } catch (NodeNotFoundException ex) {
-            throw new FileNotFoundException(target.getPath());
         }
+        finally {
+        }
+    }
+    
+    private List<URI> handleContainerMount(VOSURI target, ContainerNode node, Protocol protocol, UserPrincipal caller) {
+        List<URI> ret = new ArrayList<URI>();
+        StringBuilder sb = new StringBuilder();
+        sb.append("sshfs:");
+        sb.append(caller.getName()).append("@proto.canfar.net").append(":");
+        sb.append(node.getUri().getPath());
+        try {
+            URI u = new URI(sb.toString());
+            ret.add(u);
+        } catch (URISyntaxException ex) {
+            throw new RuntimeException("BUG: failed to generate mount endpoint URI", ex);
+        }
+        return ret;
     }
 
     public VOSURI getNodeURI(String meta, String sig, Direction direction) throws AccessControlException, IOException {
@@ -257,7 +287,7 @@ public class CavernURLGenerator implements TransferGenerator {
         try {
             verified = sv.verify(new ByteArrayInputStream(metaBytes), sigBytes);
         } catch (InvalidKeyException | RuntimeException e) {
-            log.warn("Recieved invalid signature", e);
+            log.debug("Recieved invalid signature", e);
             throw new AccessControlException("Invalid signature");
         }
         if (!verified) {
